--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,18 +8,27 @@
 </head>
 <body>
     <h3>All chats!</h3>
+    <form method="GET" action="/chats/new">
+        <button>New chat</button>
+    </form>
     <% for (let chat of chats) { %>
         <div class="chat">
             <p>From: <%= chat.from %></p>
             <div class="msg">
                 <p>Message: <%= chat.msg %></p>
+                <form action="/chats/<%= chat._id %>/edit" method="GET">
+                    <button>Edit</button>
+                </form>
+                <form action="/chats/<%= chat._id %>?_method=DELETE" method="POST">
+                    <button>Delete</button>
+                </form>
             </div>
             <p>Received by: <%= chat.to %></p>
+            <hr>
+            <p><%= chat.created_at.toString().split(" ")[4] %></p>
+            <p><%= chat.created_at.toString().split(" ").slice(0,4).join("-") %></p>
         </div>
         <br>
     <% } %>
-    <form method="GET" action="/chats/new">
-        <button>New chat</button>
-    </form>
 </body>
 </html>
